--- a/StingApp/src/app/users/users.component.html
+++ b/StingApp/src/app/users/users.component.html
@@ -1,6 +1,6 @@
 <div id="about">
   <div id="credits-1">
-    <h1><strong>A Web-Application von</strong></h1>
+    <h1><strong>Eine Web-Application von</strong></h1>
     <div id="names-1">
       <p>Robin Müller</p>
       <p>Enes Akkus</p>
