more coherent style across site

--- a/StingApp/src/app/floor/floor.component.html
+++ b/StingApp/src/app/floor/floor.component.html
@@ -2,7 +2,7 @@
   <div id="container">
     <div class="row">
       <div class="col-md-12 col-sm-12 col-xs-12 main-content">
-        <section id="image">
+        <section id="image" class="text-center">
           <a>
             <img [src]="floor$.link" class="rounded" alt="floor-plan" />          
             <div id="txt1" class="img-link" routerLink="room/1"> </div>
