--- a/StingApp/src/app/sidebar/sidebar.component.html
+++ b/StingApp/src/app/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
         <a class="nav-link" href="#">Buildings<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/users">Docs</a>
+        <a class="nav-link" routerLink="/users">About</a>
       </li>
     </ul>    
   </div>
