--- a/StingApp/src/app/building/building.component.html
+++ b/StingApp/src/app/building/building.component.html
@@ -1,5 +1,5 @@
 <div class="flex-container bg-grey">
-<h1 class="text-center">Floors</h1>  
+<h1 class="text-center main-header">Floors</h1>  
     <div class="object" *ngFor="let b of bData$">
       <div class="row">
         <div class="col-md-12 col-sm-12 col-xs-12 text-center">
