--- a/StingApp/src/app/room/room.component.html
+++ b/StingApp/src/app/room/room.component.html
@@ -1,5 +1,5 @@
 <div class="flex-container bg-grey">
-<h1 class="text-center">Welcome to room {{ bData$["room-id"].valueOf() }}</h1>
+<h1 class="text-center main-header">Welcome to room {{ bData$["room-id"].valueOf() }}</h1>
   <div class="container">
     <div class="row text-center justify-content-center">
       <div class="col-xl-4 col-md-6">
