--- a/StingApp/src/app/users/users.component.html
+++ b/StingApp/src/app/users/users.component.html
@@ -1,46 +1,53 @@
-<div id="about">
-  <div id="credits-1">
-    <h1><strong>Eine Web-Application von</strong></h1>
-    <div id="names-1">
-      <p>Robin Müller</p>
-      <p>Enes Akkus</p>
-      <p>Marc "The Memelord" Bauer</p>
-      <p>Boris Garkusha</p>
-    </div>
-  </div>
-  <div id="customers">
-    <h1><strong>Im Auftrag der</strong></h1>
-    <div id="names-2">
-      <p>Systecs GmbH</p>
-      <p id="and"><strong>und der</strong></p>
-      <p>Hochschule Esslingen</p>
-    </div>
-  </div>
-  <p id="roles"><strong>Rollen</strong></p>
-  <div id="div-roles">
-    <h1><strong>Robin Müller</strong></h1>
-    <div id="roles-1">
-      <p>C# Development</p>
-      <p>Azure Management</p>
-      <p>...</p>
-    </div>
-    <h1><strong>Enes Akkus</strong></h1>
-    <div id="roles-1">
-      <p>Backend Development</p>
-      <p>Measurement Analytics Supervisor</p>
-      <p>...</p>
-    </div>
-    <h1><strong>Marc Bauer</strong></h1>
-    <div id="roles-1">
-      <p>Application Logic (Angular)</p>
-      <p>Early Design Concepts</p>
-      <p>...</p>
-    </div>
-    <h1><strong>Boris Garkusha</strong></h1>
-    <div id="roles-1">
-      <p>Final Design Concepts</p>
-      <p>Sting-Icon Design</p>
-      <p>...</p>
+<div class="flex-container bg-grey">
+  <div class="container">
+    <div class="row text-center">
+      <div id="about" class="col-md-12 col-sm-12 col-xs-12">        
+        <div id="credits-1">
+          <h1><strong>Web-Application created by</strong></h1>
+          <div id="names-1">
+            <p>Robin Müller</p>
+            <p>Enes Akkus</p>
+            <p>Marc "The Memelord" Bauer</p>
+            <p>Boris Garkusha</p>
+          </div>
+        </div>
+      </div>
+      <div id="customers" class="col-md-12 col-sm-12 col-xs-12">
+        <h1><strong>On behalf of</strong></h1>
+        <div id="names-2">
+          <p>Systecs Informationssysteme GmbH</p>
+          <p id="and"><strong>and</strong></p>
+          <p>University of Applied Sciences Esslingen</p>          
+        </div>        
+      </div>
+      <div id="roles" class="col-md-12 col-sm-12 col-xs-12"> 
+        <div id="div-roles">
+          <h1><strong>Robin Müller</strong></h1>
+          <div id="roles-1">
+            <p>C# Development</p>
+            <p>Azure Management</p>
+            <p></p>
+          </div>
+          <h1><strong>Enes Akkus</strong></h1>
+          <div id="roles-1">
+            <p>Backend Development</p>
+            <p>Measurement Analytics Supervisor</p>
+            <p></p>
+          </div>
+          <h1><strong>Marc Bauer</strong></h1>
+          <div id="roles-1">
+            <p>Application Logic (Angular)</p>
+            <p>Early Design Concepts</p>
+            <p></p>
+          </div>
+          <h1><strong>Boris Garkusha</strong></h1>
+          <div id="roles-1">
+            <p>Final Design Concepts</p>
+            <p>Sting-Icon Design</p>
+            <p></p>
+          </div>
+        </div>      
+      </div>
     </div>
   </div>
 </div>
