--- a/StingApp/src/app/users/users.component.scss
+++ b/StingApp/src/app/users/users.component.scss
@@ -1,33 +1,22 @@
-#about {
-    text-align: center;
-    background-color: #e6ebef;
-}
-
-#and {
-    font-size: 14px;
-}
-
-#roles {
-    font-size: 24px;
-    padding-top: 1%;
-    padding-bottom: 0;
-    margin: 0;
-
-    h1 {
-        margin: 0;
-        padding: 0;
-    }
-}
-
 p {
-    font-size: 12px;
-    margin: 0;
-    padding: 0;
+    font-size: 16px;
+    margin: 0.2%;
+    padding: 0.2%;
 }
 
 h1 {
-    margin: 0;
-    text-align: center;
-    font-size: 16px;
-    padding-bottom: 2%;
+    margin-top: 2%;    
+    font-size: 26px;
+}
+
+.row > div {
+    margin-top: 1.5%;
+}
+
+#and {
+    font-size: 18px;
+}
+
+#div-roles > h1{
+    font-size: 23px;
 }
