--- a/StingApp/src/app/floor/floor.component.html
+++ b/StingApp/src/app/floor/floor.component.html
@@ -1,4 +1,11 @@
 <div class="flex-container bg-grey">
+<strong>
+  <ol class="breadcrumb">    
+    <li class="breadcrumb-item"><a routerLink="">Buildings</a></li>
+    <li class="breadcrumb-item"><a routerLink="/building/{{urlSplit$[2]}}">Floors</a></li>
+    <li class="breadcrumb-item active">Floor {{urlSplit$[4]}}</li>   
+  </ol>
+</strong>
   <div id="container">
     <div class="row">
       <div class="col-md-12 col-sm-12 col-xs-12 main-content">
