--- a/StingApp/src/app/building/building.component.html
+++ b/StingApp/src/app/building/building.component.html
@@ -1,4 +1,10 @@
 <div class="flex-container bg-grey">
+  <strong>
+  <ol class="breadcrumb">    
+    <li class="breadcrumb-item"><a routerLink="">Buildings</a></li>
+    <li class="breadcrumb-item active">Floors</li>
+  </ol>
+  </strong>
 <h1 class="text-center main-header">Floors</h1>  
     <div class="object" *ngFor="let b of bData$">
       <div class="row">
