--- a/StingApp/src/app/sidebar/sidebar.component.html
+++ b/StingApp/src/app/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-sm navbar-dark navbar-inverse navbar-fixed-left bg-dark">
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand" routerLink="">
     <img src="assets/images/Logo.png" width="30px" height="30px" alt="">
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -9,7 +9,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Buildings<span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink="">Buildings<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/users">About</a>
