--- a/StingApp/src/styles.scss
+++ b/StingApp/src/styles.scss
@@ -3,10 +3,6 @@
     font-family: 'Raleway', sans-serif;
 }
 
-.main-header{
-    padding-top: 2%;
-}
-
 .bg-grey{
     background-color: #e6ebef;
 }
@@ -18,6 +14,11 @@
 .description{
     padding-top: .5%;
     font-size: 22px;    
+}
+
+// override default bootstrap styling of breadcrumbs
+.breadcrumb{
+    margin-bottom: 0 !important;
 }
 
 // display pointer hand on hover over images which are links
