Add Last updated date for telemetry

--- a/StingApp/src/app/room/room.component.html
+++ b/StingApp/src/app/room/room.component.html
@@ -51,6 +51,16 @@
               <p class="card-text"><span id="DeviceVal">No data provided</span></p>                
           </div>
         </div>               
+      </div>
+      <div class="col-xl-4 col-md-6">
+        <div class="card" style="width: 18rem;">                      
+          <div class="card-body">
+              <img src="../../assets/images/watch.png">
+              <h5 class="card-title">Last updated</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Last telemetry received</h6>
+              <p class="card-text"><span id="TimeVal">No data provided</span></p>                
+          </div>
+        </div>
       </div>  
     </div>
     <div class="row text-center justify-content-center">
