Add function to locate device and implement in html

--- a/StingApp/src/app/room/room.component.html
+++ b/StingApp/src/app/room/room.component.html
@@ -52,10 +52,10 @@
       </div>
       <div class="col-xl-4 col-md-6">
         <div class="card" style="width: 18rem;">                      
-          <div class="card-body">
+          <div class="card-body locate-body" (click)="locate()">
               <img src="../../assets/images/device.png">
               <h5 class="card-title">Device Id</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Locate Device</h6>
+              <h6 class="card-subtitle mb-2 text-muted">Click card to locate</h6>
               <p class="card-text"><span id="DeviceVal">No data provided</span></p>                
           </div>
         </div>               
@@ -95,5 +95,3 @@
     </div>      
   </div>
 </div>
-
-
