--- a/StingApp/src/app/room/room.component.scss
+++ b/StingApp/src/app/room/room.component.scss
@@ -11,3 +11,11 @@ div {
 .graph-card{
     width: 90%;
 }
+
+.locate-body{
+    cursor: pointer;
+}
+
+.locate-body:hover {
+    box-shadow: 0 0 11px rgba(33,33,33,.2);
+}
