--- a/StingApp/src/styles.scss
+++ b/StingApp/src/styles.scss
@@ -1,6 +1,10 @@
 *{
     box-sizing: border-box;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Raleway', sans-serif;    
+}
+
+html{
+    background-color: #e6ebef;
 }
 
 .bg-grey{
