Biobasisöl, Biobasisöl vom Seitenbacher!

--- a/StingApp/src/app/users/users.component.html
+++ b/StingApp/src/app/users/users.component.html
@@ -7,7 +7,7 @@
           <div id="names-1">
             <p>Robin Müller</p>
             <p>Enes Akkus</p>
-            <p>Marc "The Memelord" Bauer</p>
+            <p>Marc Bauer</p>
             <p>Boris Garkusha</p>
           </div>
         </div>
@@ -43,10 +43,14 @@
           <h1><strong>Boris Garkusha</strong></h1>
           <div id="roles-1">
             <p>Final Design Concepts</p>
-            <p>Sting-Icon Design</p>
+            <p>Sting-House-Icon Design</p>
             <p></p>
           </div>
-        </div>      
+        </div>
+      </div>
+      <div id="iconlink" class="col-md12 col-sm-12 col-xs-12">
+        <h1><strong>All other icons can be found</strong></h1>
+        <a href="https://icons8.com/icons">here</a>
       </div>
     </div>
   </div>
