--- a/StingApp/src/app/users/users.component.scss
+++ b/StingApp/src/app/users/users.component.scss
@@ -1,3 +1,13 @@
+#iconlink {
+    h1 {
+        font-size: 20px;
+    }
+
+    a {
+        text-decoration: none;
+    }
+}
+
 p {
     font-size: 16px;
     margin: 0.2%;
