--- a/StingApp/src/app/users/users.component.html
+++ b/StingApp/src/app/users/users.component.html
@@ -50,7 +50,7 @@
       </div>
       <div id="iconlink" class="col-md12 col-sm-12 col-xs-12">
         <h1><strong>All other icons can be found</strong></h1>
-        <a href="https://icons8.com/icons">here</a>
+        <a href="https://icons8.com/icons" role="button" target="_blank"  rel="noopener noreferrer" class="btn btn-outline-dark">Here</a>
       </div>
     </div>
   </div>
