--- a/StingApp/src/app/users/users.component.scss
+++ b/StingApp/src/app/users/users.component.scss
@@ -1,13 +1,3 @@
-#iconlink {
-    h1 {
-        font-size: 20px;
-    }
-
-    a {
-        text-decoration: none;
-    }
-}
-
 p {
     font-size: 16px;
     margin: 0.2%;
@@ -29,4 +19,15 @@ h1 {
 
 #div-roles > h1{
     font-size: 23px;
+}
+
+#iconlink {
+    margin-bottom: 2%;
+    h1 {
+        font-size: 20px;
+    }
+
+    a {
+        text-decoration: none;
+    }
 }
