--- a/StingApp/src/app/app.component.html
+++ b/StingApp/src/app/app.component.html
@@ -2,7 +2,7 @@
   <!-- implement the sidebar on every page -->
   <app-sidebar></app-sidebar>
 
-  <div id="container">
+  <div>
     <router-outlet></router-outlet>
   </div>
 </div>
