Add work items, minor changes

--- a/StingApp/src/app/users/users.component.html
+++ b/StingApp/src/app/users/users.component.html
@@ -1,3 +1,4 @@
+<!-- TODO: might want to remove this completely since doesn't apply anymore -->
 <div class="flex-container bg-grey">
   <div class="container">
     <div class="row text-center">
