--- a/StingApp/src/app/room/room.component.html
+++ b/StingApp/src/app/room/room.component.html
@@ -2,12 +2,12 @@
 <strong>
     <ol class="breadcrumb">    
       <li class="breadcrumb-item"><a routerLink="">Buildings</a></li>
-      <li class="breadcrumb-item"><a routerLink="/building/{{urlSplit$[2]}}">Floors</a></li>
-      <li class="breadcrumb-item"><a routerLink="/building/{{urlSplit$[2]}}/floor/{{urlSplit$[4]}}">Floor {{urlSplit$[4]}}</a></li>   
-      <li class="breadcrumb-item active">Room {{bData$["room-id"]}}</li>
+      <li class="breadcrumb-item"><a routerLink="/building/{{urlSplit[2]}}">Floors</a></li>
+      <li class="breadcrumb-item"><a routerLink="/building/{{urlSplit[2]}}/floor/{{urlSplit[4]}}">Floor {{urlSplit[4]}}</a></li>   
+      <li class="breadcrumb-item active">Room {{bData["room-id"]}}</li>
     </ol>
   </strong>
-<h1 class="text-center main-header">Welcome to room {{ bData$["room-id"].valueOf() }}</h1>
+<h1 class="text-center main-header">Welcome to room {{ bData["room-id"].valueOf() }}</h1>
   <div class="container">
     <div class="row text-center justify-content-center">
       <div class="col-xl-4 col-md-6">
