Rename sidebar component

--- a/StingApp/src/app/navigation-bar/navigation-bar.component.html
+++ b/StingApp/src/app/navigation-bar/navigation-bar.component.html
@@ -12,7 +12,7 @@
         <a class="nav-link" routerLink="">Buildings<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/users">About</a>
+        <a class="nav-link" routerLink="/about">About</a>
       </li>
     </ul>    
   </div>
