Rename related changes, add TelemetryParams class

--- a/StingApp/src/app/app.component.html
+++ b/StingApp/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div id="container">
   <!-- implement the sidebar on every page -->
-  <app-sidebar></app-sidebar>
+  <app-navigation-bar></app-navigation-bar>
 
   <div>
     <router-outlet></router-outlet>
