--- a/StingApp/src/app/room/room.component.html
+++ b/StingApp/src/app/room/room.component.html
@@ -1,97 +1,98 @@
 <div class="flex-container bg-grey">
-<strong>
-    <ol class="breadcrumb">    
+  <strong>
+    <ol class="breadcrumb">
       <li class="breadcrumb-item"><a routerLink="">Buildings</a></li>
       <li class="breadcrumb-item"><a routerLink="/building/{{position.buildingId}}">Floors</a></li>
-      <li class="breadcrumb-item"><a routerLink="/building/{{position.buildingId}}/floor/{{position.floorId}}">Floor {{position.floorId}}</a></li>   
-      <li class="breadcrumb-item active">Room {{ +roomData["room-identifier"] }}</li>
+      <li class="breadcrumb-item"><a routerLink="/building/{{position.buildingId}}/floor/{{position.floorId}}">Floor
+          {{ floorAlias }}</a></li>
+      <li class="breadcrumb-item active">Room {{ roomData.alias }}</li>
     </ol>
   </strong>
-<h1 class="text-center main-header">Welcome to room {{ +roomData["room-identifier"] }}</h1>
+  <h1 class="text-center main-header">Welcome to room {{ roomData.alias }}</h1>
   <div class="container">
     <div class="row text-center justify-content-center">
       <div class="col-xl-4 col-md-6">
-        <div class="card" style="width: 18rem;">                      
+        <div class="card" style="width: 18rem;">
           <div id="temperature-body" class="card-body">
-              <img src="../../assets/images/temperature.png">
-              <h5 class="card-title">Temperature</h5>
-              <h6 id="temperature" class="card-subtitle mb-2 text-muted">within thresholds</h6>
-              <p class="card-text"><span id="TempVal">No data provided</span></p>                
+            <img src="../../assets/images/temperature.png">
+            <h5 class="card-title">Temperature</h5>
+            <h6 id="temperature" class="card-subtitle mb-2 text-muted">within thresholds</h6>
+            <p class="card-text"><span id="TempVal">No data provided</span></p>
           </div>
         </div>
       </div>
       <div class="col-xl-4 col-md-6">
-        <div class="card" style="width: 18rem;">                      
+        <div class="card" style="width: 18rem;">
           <div id="humidity-body" class="card-body">
-              <img src="../../assets/images/humidity.png">
-              <h5 class="card-title">Humidity</h5>
-              <h6 id="humidity" class="card-subtitle mb-2 text-muted">within thresholds</h6>
-              <p class="card-text"><span id="HumVal">No data provided</span></p>                
-          </div>
-        </div>          
-      </div>
-      <div class="col-xl-4 col-md-6">
-        <div class="card" style="width: 18rem;">                      
-          <div class="card-body">
-              <img src="../../assets/images/airPressure.png">
-              <h5 class="card-title">Air Pressure</h5>
-              <h6 class="card-subtitle mb-2 text-muted">within thresholds</h6>
-              <p class="card-text"><span id="PressVal">No data provided</span></p>                
-          </div>
-        </div>          
-      </div>          
-      <div class="col-xl-4 col-md-6">
-        <div class="card" style="width: 18rem;">                      
-          <div class="card-body">
-              <img src="../../assets/images/altitude.png">
-              <h5 class="card-title">Altitude</h5>
-              <h6 class="card-subtitle mb-2 text-muted">above sea level</h6>
-              <p class="card-text"><span id="AltVal">No data provided</span></p>                
-          </div>
-        </div>          
-      </div>
-      <div class="col-xl-4 col-md-6">
-        <div class="card" style="width: 18rem;">                      
-          <div class="card-body locate-body" (click)="locate()">
-              <img src="../../assets/images/device.png">
-              <h5 class="card-title">Device Id</h5>
-              <h6 class="card-subtitle mb-2 text-muted">click card to locate</h6>
-              <p class="card-text"><span id="DeviceVal">No data provided</span></p>                
-          </div>
-        </div>               
-      </div>
-      <div class="col-xl-4 col-md-6">
-        <div class="card" style="width: 18rem;">                      
-          <div class="card-body">
-              <img src="../../assets/images/watch.png">
-              <h5 class="card-title">Last Update</h5>
-              <h6 class="card-subtitle mb-2 text-muted">last telemetry received</h6>
-              <p class="card-text"><span id="TimeVal">No data provided</span></p>                
+            <img src="../../assets/images/humidity.png">
+            <h5 class="card-title">Humidity</h5>
+            <h6 id="humidity" class="card-subtitle mb-2 text-muted">within thresholds</h6>
+            <p class="card-text"><span id="HumVal">No data provided</span></p>
           </div>
         </div>
-      </div>  
+      </div>
+      <div class="col-xl-4 col-md-6">
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <img src="../../assets/images/airPressure.png">
+            <h5 class="card-title">Air Pressure</h5>
+            <h6 class="card-subtitle mb-2 text-muted">within thresholds</h6>
+            <p class="card-text"><span id="PressVal">No data provided</span></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-4 col-md-6">
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <img src="../../assets/images/altitude.png">
+            <h5 class="card-title">Altitude</h5>
+            <h6 class="card-subtitle mb-2 text-muted">above sea level</h6>
+            <p class="card-text"><span id="AltVal">No data provided</span></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-4 col-md-6">
+        <div class="card" style="width: 18rem;">
+          <div class="card-body locate-body" (click)="locate()">
+            <img src="../../assets/images/device.png">
+            <h5 class="card-title">Device Id</h5>
+            <h6 class="card-subtitle mb-2 text-muted">click card to locate</h6>
+            <p class="card-text"><span id="DeviceVal">No data provided</span></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-xl-4 col-md-6">
+        <div class="card" style="width: 18rem;">
+          <div class="card-body">
+            <img src="../../assets/images/watch.png">
+            <h5 class="card-title">Last Update</h5>
+            <h6 class="card-subtitle mb-2 text-muted">last telemetry received</h6>
+            <p class="card-text"><span id="TimeVal">No data provided</span></p>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="row text-center justify-content-center">
       <div class="col-12">
         <div class="card graph-card">
-          <div class="card-body">                       
-            <div *ngIf="chart">
-              <canvas id="canvasTemp">{{chart}}</canvas>
-            </div>              
-          </div> 
-        </div>   
-      </div> 
-    </div> 
+          <div class="card-body">
+            <canvas id="canvasTemp">
+              <app-line-chart></app-line-chart>
+            </canvas>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="row text-center justify-content-center">
       <div class="col-12">
-        <div class="card graph-card"> 
+        <div class="card graph-card">
           <div class="card-body">
-            <div *ngIf="chart">
-            <canvas id="canvasHum">{{chart}}</canvas>
-            </div>
+            <canvas id="canvasHum">
+              <app-line-chart></app-line-chart>
+            </canvas>
           </div>
-        </div>   
-      </div>                    
-    </div>      
+        </div>
+      </div>
+    </div>
   </div>
 </div>
