--- a/StingApp/src/app/navigation-bar/navigation-bar.component.html
+++ b/StingApp/src/app/navigation-bar/navigation-bar.component.html
@@ -6,13 +6,14 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
+  <!--  TODO: when home component exists update to buildings component not being exact -->
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="">Buildings<span class="sr-only">(current)</span></a>
+      <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact:true}" class="nav-item">
+        <a class="nav-link" [routerLink]="['/']">Buildings</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/about">About</a>
+      <li [routerLinkActive]="['active']" class="nav-item">
+        <a class="nav-link" [routerLink]="['/about']">About</a>
       </li>
     </ul>    
   </div>
