Update about page

--- a/src/Sting.WebApp/src/app/about/about.component.html
+++ b/src/Sting.WebApp/src/app/about/about.component.html
@@ -1,57 +1,22 @@
-<!-- TODO: might want to remove this completely since doesn't apply anymore -->
+<!-- TODO: update to be responsive -->
 <div class="flex-container bg-grey">
   <div class="container">
     <div class="row text-center">
       <div id="about" class="col-md-12 col-sm-12 col-xs-12">        
-        <div id="credits-1">
-          <h1><strong>Web-Application created by</strong></h1>
-          <div id="names-1">
-            <p>Robin Müller</p>
-            <p>Enes Akkus</p>
-            <p>Marc Bauer</p>
-            <p>Boris Garkusha</p>
-          </div>
+        <div id="social">
+          <h1><strong>You can find me here</strong></h1>
+          <a href="https://github.com/RobinTTY" target="_blank" rel="noopener">
+            <img src="../../assets/images/social/github.svg" alt="Github" width="64"/>
+          </a>
+          <a href="https://twitter.com/Robin_tty" target="_blank" rel="noopener">
+            <img src="../../assets/images/social/twitter.svg" alt="Twitter" width="64"/>
+          </a>
         </div>
       </div>
-      <div id="customers" class="col-md-12 col-sm-12 col-xs-12">
-        <h1><strong>On behalf of</strong></h1>
-        <div id="names-2">
-          <p>Systecs Informationssysteme GmbH</p>
-          <p id="and"><strong>and</strong></p>
-          <p>University of Applied Sciences Esslingen</p>          
-        </div>        
-      </div>
-      <div id="roles" class="col-md-12 col-sm-12 col-xs-12"> 
-        <div id="div-roles">
-          <h1><strong>Robin Müller</strong></h1>
-          <div id="roles-1">
-            <p>C# Development</p>
-            <p>Azure Management</p>
-            <p></p>
-          </div>
-          <h1><strong>Enes Akkus</strong></h1>
-          <div id="roles-1">
-            <p>Backend Development</p>
-            <p>Measurement Analytics Supervisor</p>
-            <p></p>
-          </div>
-          <h1><strong>Marc Bauer</strong></h1>
-          <div id="roles-1">
-            <p>Application Logic (Angular)</p>
-            <p>Early Design Concepts</p>
-            <p></p>
-          </div>
-          <h1><strong>Boris Garkusha</strong></h1>
-          <div id="roles-1">
-            <p>Final Design Concepts</p>
-            <p>Sting-House-Icon Design</p>
-            <p></p>
-          </div>
-        </div>
-      </div>
-      <div id="iconlink" class="col-md12 col-sm-12 col-xs-12">
-        <h1><strong>All other icons can be found</strong></h1>
-        <a href="https://icons8.com/icons" role="button" target="_blank"  rel="noopener noreferrer" class="btn btn-outline-dark">Here</a>
+      <div id="icons" class="col-md12 col-sm-12 col-xs-12">
+        <h5><strong>Some of the Icons were provided by</strong></h5>
+        <a href="https://icons8.com/icon/118527/icons8"><img src="https://img.icons8.com/dusk/64/000000/icons8-new-logo.png"></a>
+        <p><strong>Icons8</strong></p>
       </div>
     </div>
   </div>
