Use correct access modifiers

--- a/src/Sting.WebApp/src/app/room/room.component.html
+++ b/src/Sting.WebApp/src/app/room/room.component.html
@@ -53,7 +53,7 @@
       </div>
       <div class="col-xl-4 col-md-6">
         <div class="card" style="width: 18rem;">
-          <div class="card-body locate-body" (click)="locate()">
+          <div class="card-body locate-body">
             <img src="../../assets/images/device.png">
             <h5 class="card-title">Device Id</h5>
             <h6 class="card-subtitle mb-2 text-muted">click card to locate</h6>
