Update configuration contents

--- a/src/Sting.WebApp/src/app/buildings/buildings.component.html
+++ b/src/Sting.WebApp/src/app/buildings/buildings.component.html
@@ -8,7 +8,7 @@
         </div>
       </div>   
       <div class="col-md-12 col-sm-12 col-xs-12 text-center description">      
-        <a id="bottom-left" routerLink="building/{{building.id}}"><strong>{{ building.name }}</strong></a>
+        <a id="bottom-left" routerLink="building/{{building.id}}"><strong>{{ building.alias }}</strong></a>
       </div> 
     </div>        
   </div>
